--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Postgis extensions for laravel. Aims to make it easy to work with geometries from laravel models",
   "require": {
     "php": ">=7.1",
-    "illuminate/database": "^6.0|^7.0|^8.0",
+    "illuminate/database": "^6.0|^7.0|^8.0|^9.0",
     "geo-io/wkb-parser": "^1.0",
     "jmikola/geojson": "^1.0",
     "bosnadev/database": "^0.21"
