Revert "rename pack"
This reverts commit dc6e44a3d8e8f0fdadc4f44adbd3fd34aa04de7b.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "zgldh/laravel-postgis",
+  "name": "mstaack/laravel-postgis",
   "description": "Postgis extensions for laravel. Aims to make it easy to work with geometries from laravel models",
   "require": {
     "php": ">=7.1",
